--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -112,6 +112,13 @@
 		/* letter-spacing: px; */
 		cursor: pointer;
 	}
+	
+	p{
+		font-family: 'Roboto', sans-serif;
+		font-weight: 900;
+		font-size: 11px;
+		letter-spacing: 1px;
+	}
 
 }
 
